--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eslint-config-next": "12.1.6",
     "gray-matter": "^4.0.3",
     "postcss": "^8.4.14",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "tailwindcss": "^3.0.24",
     "typescript": "4.7.3"
   }
