--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "@types/node": "17.0.40",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
