--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "classnames": "^2.3.1",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "reading-time": "^1.5.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
