--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gray-matter": "^4.0.3",
     "postcss": "^8.4.14",
     "remark": "^14.0.2",
+    "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.1",
     "tailwindcss": "^3.0.24",
     "typescript": "4.7.3"
