--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.1",
+    "feed": "^4.2.2",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
