--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.3.1",
     "feed": "^4.2.2",
     "next": "12.1.6",
+    "next-sitemap": "^3.1.7",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "reading-time": "^1.5.0"
